...
                    label = {
                      if (editingComment) Text("Modify your comment") else Text("Add a comment")
                    },
                    modifier =
                        Modifier.fillMaxWidth()
                            .padding(vertical = 2.dp)
                            .testTag("NewCommentInput")
                            .focusRequester(focusRequester)
                            .focusable(true), // Ensure it’s still focusable for user interaction
                    trailingIcon = {
                      IconButton(
                          onClick = {
                            onDone(
...
